--- a/style.css
+++ b/style.css
@@ -8,7 +8,26 @@
     cursor: pointer;
   }
   
+    nav{
+        background-color:cornflowerblue;
+    }
+
   .hidden {
     display: none;
   }
-  
+  small{
+    max-width: 50%;
+  }
+
+  p{
+          border: 1px solid black;
+          max-width: 100%;
+          height:300px;
+          overflow: auto;
+  }
+
+  body{
+    margin: auto;
+    max-width: max-content;
+    max-height: max-content;
+  }
