--- a/style.css
+++ b/style.css
@@ -94,3 +94,13 @@ header{
     background:green;
     color: white;
   }
+
+  .history-card {
+    border: 3px solid black;
+    padding: 5px;
+    margin: 5px;
+  }
+  .history-card div {
+    display: inline;
+    background-color: aqua;
+  }
