--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header{
   background-position: center;
   background-size: cover;
   background-repeat:no-repeat;
-  font-size: 40px;
+  font-size: 7vmin;
 }
 
 #header-text{
