--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+body {
+  font-size: 1vmax;
+  font-family: 'Overlock', cursive;
+}
+
 .nav-link {
     color:white;
-    margin: 0.5em;
+    margin: 2.5vw;
   }
   
   .nav-link:hover {
@@ -25,6 +30,8 @@
 
 #home-content{
   margin-top: 10%;
+  font-size: 5vmax;
+  text-align: center;
 }
 
 section{
